--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "complaint_analyst", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 # Core ML & Data
 pandas = "^2.1.3"
 langchain = "^0.0.340"
@@ -20,6 +20,8 @@ streamlit = "^1.28.2"
 # Utilities
 python-dotenv = "^1.0.0"     
 tqdm = "^4.66.1"             
+torchvision = {version = "^0.22.1", source = "pypi"}
+torchaudio = {version = "^2.7.1", source = "pypi"}
 
 [tool.poetry.group.dev.dependencies]
 notebook = "^7.0.6"         
